--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <!-- image element with source attribute only -->
+     <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+     <!-- image element with source and alt attributes -->
+     <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A lion">
+     <!-- image element with source , alt and title attributes -->
+     <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A lion" title="Lion">
   </body>
 </html>
